code for rows rearranging rows has been added, edit bar button has been added, still unable to interact screen when rearranging cell order.

--- a/Contacts.tableviewapp/Base.lproj/Main.storyboard
+++ b/Contacts.tableviewapp/Base.lproj/Main.storyboard
@@ -13,20 +13,20 @@
         <scene sceneID="YHx-Xh-5yV">
             <objects>
                 <tableViewController id="LB2-Ab-4du" customClass="ContactsTableViewController" customModule="Contacts_tableviewapp" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="P9i-Fq-9HB">
+                    <tableView key="view" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="P9i-Fq-9HB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="cell" textLabel="DZi-ww-FPi" style="IBUITableViewCellStyleDefault" id="rdj-zz-hyJ">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="DZi-ww-FPi" style="IBUITableViewCellStyleDefault" id="rdj-zz-hyJ">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rdj-zz-hyJ" id="xJJ-jC-ZIi">
-                                    <rect key="frame" x="0.0" y="0.0" width="308" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="DZi-ww-FPi">
-                                            <rect key="frame" x="15" y="0.0" width="293" height="43.5"/>
+                                            <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -34,8 +34,11 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" adjustable="YES"/>
+                                </accessibility>
                                 <connections>
-                                    <segue destination="bph-ba-m6N" kind="show" identifier="contactsDetailSegue" trigger="accessoryAction" id="ZyK-u2-QxA"/>
+                                    <segue destination="bph-ba-m6N" kind="show" identifier="DetailViewController" id="yGO-3a-0kg"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -48,7 +51,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E2i-AB-qm3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2513" y="-109"/>
+            <point key="canvasLocation" x="2518" y="-293"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="xOU-3H-pp9">
